--- a/notes/meeting_2021oct10.org
+++ b/notes/meeting_2021oct10.org
@@ -18,21 +18,23 @@
 *** other leftover bits
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021sep26/anon_var_vs_topic.raku
 
-*** Data::Reshapers
-**** https://raku.land/cpan:ANTONOV/Data::Reshapers
+**** pairs of separators from a string
+***** https://www.nntp.perl.org/group/perl.perl6.users/2021/09/msg10138.html
+***** a discussion yary was involved in, which indicates there's something interesting
 
-*** secure json-ification, vadim belman
-**** https://colabti.org/irclogger/irclogger_log/raku?date=2021-09-14#l100
-**** https://vrurg.github.io/2021/09/14/Secure-JSONification
-**** https://www.reddit.com/r/rakulang/comments/pocomd/a_post_which_came_out_from_a_provocation/
 
-*** lispyness of raku
-**** https://www.codesections.com/blog/raku-lisp-impression/
-**** https://www.reddit.com/r/rakulang/comments/ptm7qx/rakus_surprisingly_good_lisp_impression/
+**** Data::Reshapers
+***** https://raku.land/cpan:ANTONOV/Data::Reshapers
 
-*** pairs of separators from a string
-**** https://www.nntp.perl.org/group/perl.perl6.users/2021/09/msg10138.html
-**** a discussion yary was involved in, which indicates there's something interesting
+**** secure json-ification, vadim belman
+***** https://colabti.org/irclogger/irclogger_log/raku?date=2021-09-14#l100
+***** https://vrurg.github.io/2021/09/14/Secure-JSONification
+***** https://www.reddit.com/r/rakulang/comments/pocomd/a_post_which_came_out_from_a_provocation/
+
+**** lispyness of raku
+***** https://www.codesections.com/blog/raku-lisp-impression/
+***** https://www.reddit.com/r/rakulang/comments/ptm7qx/rakus_surprisingly_good_lisp_impression/
+
 
 *** once around the net
 **** stackoverflow
