--- a/notes/meeting_2021oct10.org
+++ b/notes/meeting_2021oct10.org
@@ -14,22 +14,24 @@
 **** Data::Reshapers
 ***** https://raku.land/cpan:ANTONOV/Data::Reshapers
 
+**** secure json-ification, vadim belman
+***** https://colabti.org/irclogger/irclogger_log/raku?date=2021-09-14#l100
+***** https://vrurg.github.io/2021/09/14/Secure-JSONification
+***** https://www.reddit.com/r/rakulang/comments/pocomd/a_post_which_came_out_from_a_provocation/
+
+
 
 *** bioinformatics on rosettacode 
 **** there's a half dozen entries, here's a simple one:
 ***** http://rosettacode.org/wiki/Bioinformatics/base_count
 
 *** other leftover bits
-**** https://github.com/doomvox/raku-study/tree/main/bin/2021sep26/anon_var_vs_topic.raku
+**** a buglet or I'm crazy (smart money is on...)
+***** https://github.com/doomvox/raku-study/tree/main/bin/2021sep26/anon_var_vs_topic.raku
 
 **** pairs of separators from a string
 ***** https://www.nntp.perl.org/group/perl.perl6.users/2021/09/msg10138.html
 ***** a discussion yary was involved in, which indicates there's something interesting
-
-**** secure json-ification, vadim belman
-***** https://colabti.org/irclogger/irclogger_log/raku?date=2021-09-14#l100
-***** https://vrurg.github.io/2021/09/14/Secure-JSONification
-***** https://www.reddit.com/r/rakulang/comments/pocomd/a_post_which_came_out_from_a_provocation/
 
 **** lispyness of raku
 ***** https://www.codesections.com/blog/raku-lisp-impression/
