--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -93,10 +93,15 @@
 **** the second char, or the two char pair
 ***** survey says "second char"
 ****** textual support in early writing
-
-**** Willaim Michels discussion
+****** William Michels took the minority side,
+******* has a reading of his own of some of the material
 **** background
 ***** https://github.com/Raku/doc/pull/3965#issuecomment-924405557
 ***** https://github.com/Raku/doc/pull/3965#issue-1003135309
 ***** https://github.com/Raku/doc/issues/3966
 ***** https://design.raku.org/S02.html#Twigils
+**** the term twigil appears to be a larry wall invention
+***** not many web hits
+***** one dictionary site refers to perl
+****** "Twigil meaning (computing, programming, Perl language) A character prepended to a variable name to indicate its scope."
+
