--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -92,7 +92,7 @@
 *** definition of "twigil"  
 **** the second char, or the two char pair
 ***** survey says "second char"
-****** textual support in early writing
+****** textual support in early writings of the larry
 ****** William Michels took the minority side,
 ******* has a reading of his own of some of the material
 ****** JJ offers a bit of limited support:
