--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -8,9 +8,10 @@
 *** bin pre-loaded with small ammo
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021sep26/anon_var_vs_topic.raku
 *** nano-lightning talk: given-when vs multi-dispatch
-https://github.com/doomvox/raku-study/tree/main/raku-study/notes/talks/multidispatch_vs_case
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021sep26/01-the_given_when_case.raku
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021sep26/02-the_multi_dispatch_case.raku
+**** some other material:
+***** https://github.com/doomvox/raku-study/tree/main/raku-study/notes/talks/multidispatch_vs_case
 ***** notice: order matters with given-when, with multidispatch it's specificity
 ****** given-when is straight-forward to think about
 ****** multi-dispatch has OOP flexibility
