--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -12,20 +12,20 @@
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021sep26/02-the_multi_dispatch_case.raku
 **** some other material:
 ***** https://github.com/doomvox/raku-study/tree/main/raku-study/notes/talks/multidispatch_vs_case
-***** notice: order matters with given-when, with multidispatch it's specificity
-****** given-when is straight-forward to think about
-****** multi-dispatch has OOP flexibility
-****** benchmark: with repetition argument running with "time"
-******* results vary tremendously, no clear winner
-****** multi with overlapping subsets: 
-******* https://github.com/doomvox/raku-study/tree/main/bin/2021sep26/multi_dispatch_with_overlapping_subset_types.raku
-******** tie breaking:
-********* I figured you'd need "is default"-- instead it goes by order-of-definition (NOT DOCUMENTED)
-********* "is default" actually only works for two alternatives, with three you'd be SOL
-********* brad gilbert argues it has to be this way for performance reasons
-******** bruce gray tried some variants... 
-********* variables of type Hero/Monster
-********* Hero/Monster classes
+**** note: order matters with given-when, with multidispatch it's specificity
+***** given-when is straight-forward to think about
+***** multi-dispatch has OOP flexibility
+***** benchmark: with repetition argument running with "time"
+****** results vary tremendously, no clear winner
+***** multi with overlapping subsets: 
+****** https://github.com/doomvox/raku-study/tree/main/bin/2021sep26/multi_dispatch_with_overlapping_subset_types.raku
+******* tie breaking:
+******** I figured you'd need "is default"-- instead it goes by order-of-definition (NOT DOCUMENTED)
+******** "is default" actually only works for two alternatives, with three you'd be SOL
+******** brad gilbert argues it has to be this way for performance reasons
+******* bruce gray tried some variants... 
+******** variables of type Hero/Monster
+******** Hero/Monster classes
 
 *** data-handling in raku
 **** https://stackoverflow.com/questions/66926663/is-there-a-convenient-way-to-replicate-rs-concept-of-named-vectors-in-raku-p/67513527?noredirect=1#comment122449810_67513527
