--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -39,7 +39,7 @@ say factorial( 1 );
 #+BEGIN_SRC perl6
 multi factorial ( 0 --> 1 ){}
 #+END_SRC
-
+********** Alternately, the "returns" keyword
 
 
 ******* bruce gray tried some variants... 
