--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -149,3 +149,14 @@ https://docs.raku.org/language/glossary#index-entry-Allomorph
 **** hailstone sequence
 ***** https://xkcd.com/710/
 ***** http://rosettacode.org/wiki/Hailstone_sequence
+
+**** jeff question about opening files in bin mode 
+***** reading file contents byte-at-time
+***** bruce gray
+#+BEGIN_SRC perl6
+$file.slurp(:bin)
+my $z = $file.IO.slurp(:bin); say $z.pop; say $z.pop;
+# Head of array: modifying (.shift/.unshift), not-modifying (.head, .skip(...).head());
+# Tail of array: modifying (.push, .pop), not-modifying (.tail );
+# also: [0], .[1], .[*-1], .[*-3..*-3], etc
+#+END_SRC
