--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -193,4 +193,12 @@ https://unix.stackexchange.com/questions/670307/how-can-i-transliterate-some-cha
 16:24:52	 From Jeff : https://dev.to
 16:24:57	 From Bruce Gray : https://dev.to/simongreennet/weekly-challenge-127-4k6j
 
+16:42:04	 From Bruce Gray : https://www.youtube.com/watch?v=cj02_UeUnGQ
+
+16:36:59	 From Bruce Gray : https://www.looneylabs.com/games/fluxx
+16:37:00	 From William Michels : https://www.looneylabs.com/games/fluxx
+16:38:38	 From Joseph Brenner : Simon Tatham's Portable Puzzle Collection
+16:39:25	 From Joseph Brenner : Bruce recommends lightup
+
+
 
