--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -23,9 +23,10 @@
 ******** I figured you'd need "is default"-- instead it goes by order-of-definition (NOT DOCUMENTED)
 ******** "is default" actually only works for two alternatives, with three you'd be SOL
 ******** brad gilbert argues it has to be this way for performance reasons
-******** most recent brad gilbert post (factorial) example is puzzling
-******** https://www.nntp.perl.org/group/perl.perl6.users/2021/09/msg10149.html
-********* doesn't seem to address the issue at hand
+******** brad gilbert post using factorial example is puzzling:
+********* https://www.nntp.perl.org/group/perl.perl6.users/2021/09/msg10149.html
+********* https://github.com/doomvox/raku-study/bin/2021sep26/multi_dispatch_brad_gilbert_factorial.raku
+********* doesn't seem to address the issue at hand?
 ********* some idioms in use are interesting:
 #+BEGIN_SRC perl6
 multi factorial ( 0 --> 1 ){}
