--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -43,9 +43,9 @@ multi factorial ( 0 --> 1 ){}
 ********** Alternately, the "returns" keyword
 *********** https://docs.raku.org/routine/returns
 *********** https://docs.raku.org/language/functions#Return_type_constraints
-********* 
+********* Here, the "\n" is not a newline, but declaring the variable "n" (sans sigil)
 #+BEGIN_SRC perl6
-    multi factorial ( UInt \n ) { factorial( n - 1 ) * n }
+ multi factorial ( UInt \n ) { factorial( n - 1 ) * n }
 #+END_SRC
 
 
